--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
+    "jalaali-js": "^1.2.7",
+    "persian-date": "^1.1.0",
     "pnpm": "^9.11.0"
   }
 }
